# nx-pandas

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_nx_tests.sh
nx_pandas/: __init__.py  _patch.py  interface.py
nx_pandas/tests/: test_df_nx_attrs.py
nx_pandas_graph/: __init__.py  _get_info.py  interface.py
nx_pandas_graph/classes/: digraph.py  graph.py  multidigraph.py  multigraph.py
